--- a/AtividadeCurriculo.html
+++ b/AtividadeCurriculo.html
@@ -9,30 +9,30 @@
     <link rel="stylesheet" href="AtividadeCurriculo.css">
 
 </head>
-
+<!-- 
 <style>
         body {
  
 .imagem-html {
             float: right;
         }
+        
     }
 
-</style>
+</style> -->
 </head>
 
 </html>
 
 <body>
-
+    
 <h1>Perla Santos de Oliveira</h1>
 
-<img src="CurriculoFoto/FotoRosto.jpg" alt="Foto do Curriculo" class="imagem-html">
+<img src="FotoRosto/FotoRosto.jpg" alt="Foto do Curriculo" class="imagem-html">
 
 <p class="center">Brasileira solteira 28 anos</P>
 <P class="center"> Telefone: (71) 99999-9999 E-mail: oliveira.perla5@gmail.com</P> 
 <P class="center">Endereco: Rua dos Sonhadores, 1000 - Jardim Liberdade - Salvador BA</P>
-
 
 
 <h2>Objetivo</h2>
