--- a/Formulario.html
+++ b/Formulario.html
@@ -2,8 +2,8 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Currículo</title>
-    <meta name="Currículo" content="Modelo de currículo">
+    <title>Formulario</title>
+    <meta name="Formulario" content="Modelo de formulario">
     <meta name="author" content="Perla oliveira">
 </head>
 
